adjust to Evoplex 0.1.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Evoplex <evoplex.github.io>
+#  Evoplex <https://evoplex.org>
 #  Copyright (C) 2016-present
 #
 ##########################################################################
